crates/bevy_reflect_compile_fail_tests/tests/reflect_derive/custom_where.fail.stderr
error: expected `:`
  --> tests/reflect_derive/custom_where.fail.rs:15:44
   |
15 | #[reflect(where T: std::fmt::Debug, MyTrait)]
   |                                            ^
